--- a/BougsApp-iOS/ChannelsList/ChannelsListViewController.storyboard
+++ b/BougsApp-iOS/ChannelsList/ChannelsListViewController.storyboard
@@ -35,17 +35,17 @@
                                                         <stackView opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="sW0-TJ-ehh">
                                                             <rect key="frame" x="20" y="25" width="334" height="50"/>
                                                             <subviews>
-                                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="yHm-OG-IsZ">
+                                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="yHm-OG-IsZ">
                                                                     <rect key="frame" x="0.0" y="0.0" width="298" height="50"/>
                                                                     <subviews>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CTw-1S-GEf">
-                                                                            <rect key="frame" x="0.0" y="0.0" width="298" height="20"/>
+                                                                            <rect key="frame" x="0.0" y="0.0" width="298" height="22.5"/>
                                                                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="19"/>
                                                                             <nil key="textColor"/>
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Selected Plan" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DCj-Bd-b5q">
-                                                                            <rect key="frame" x="0.0" y="30" width="298" height="20"/>
+                                                                            <rect key="frame" x="0.0" y="27.5" width="298" height="22.5"/>
                                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                             <nil key="textColor"/>
                                                                             <nil key="highlightedColor"/>
@@ -57,7 +57,7 @@
                                                                     <color key="tintColor" name="TextPrimaryAccentColor"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="width" constant="36" id="fc9-3X-FS5"/>
-                                                                        <constraint firstAttribute="height" constant="36" id="tf2-CP-ASc"/>
+                                                                        <constraint firstAttribute="height" priority="999" constant="36" id="tf2-CP-ASc"/>
                                                                     </constraints>
                                                                 </imageView>
                                                             </subviews>
@@ -89,13 +89,59 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="S8c-co-mhL">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FyC-lr-14W" customClass="NeumorphicView" customModule="BougsApp_iOS" customModuleProvider="target">
+                                        <rect key="frame" x="20" y="359.5" width="374" height="177.5"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="8kt-MH-6bc">
+                                                <rect key="frame" x="30" y="20" width="314" height="137.5"/>
+                                                <subviews>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="exclamationmark.triangle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="5DY-LE-zEH">
+                                                        <rect key="frame" x="127" y="1" width="60" height="58"/>
+                                                        <color key="tintColor" name="TextPrimaryAccentColor"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="60" id="eG5-4C-trc"/>
+                                                            <constraint firstAttribute="height" constant="60" id="wtw-8w-vow"/>
+                                                        </constraints>
+                                                    </imageView>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No channels found for targets" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3vT-4A-hXu">
+                                                        <rect key="frame" x="41.5" y="70" width="231.5" height="67.5"/>
+                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                                        <color key="textColor" name="TextPrimaryAccentColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                        <color key="backgroundColor" name="AppBackgroundColorScheme"/>
+                                        <constraints>
+                                            <constraint firstItem="8kt-MH-6bc" firstAttribute="top" secondItem="FyC-lr-14W" secondAttribute="top" constant="20" id="KrM-BQ-QbL"/>
+                                            <constraint firstAttribute="bottom" secondItem="8kt-MH-6bc" secondAttribute="bottom" constant="20" id="WQG-gr-j8Z"/>
+                                            <constraint firstItem="8kt-MH-6bc" firstAttribute="leading" secondItem="FyC-lr-14W" secondAttribute="leading" constant="30" id="lP5-hR-UD3"/>
+                                            <constraint firstAttribute="trailing" secondItem="8kt-MH-6bc" secondAttribute="trailing" constant="30" id="uAd-aj-rNF"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" name="AppBackgroundColorScheme"/>
+                                <constraints>
+                                    <constraint firstItem="FyC-lr-14W" firstAttribute="centerY" secondItem="S8c-co-mhL" secondAttribute="centerY" id="2J3-Wu-BN6"/>
+                                    <constraint firstItem="FyC-lr-14W" firstAttribute="leading" secondItem="S8c-co-mhL" secondAttribute="leading" constant="20" id="V3j-XE-GEN"/>
+                                    <constraint firstAttribute="trailing" secondItem="FyC-lr-14W" secondAttribute="trailing" constant="20" id="blA-3Q-piS"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="aWe-rt-OsI"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="WeK-ik-xqs" firstAttribute="trailing" secondItem="aWe-rt-OsI" secondAttribute="trailing" id="19d-WQ-mR5"/>
                             <constraint firstItem="WeK-ik-xqs" firstAttribute="leading" secondItem="aWe-rt-OsI" secondAttribute="leading" id="Ari-LE-2AW"/>
+                            <constraint firstItem="S8c-co-mhL" firstAttribute="top" secondItem="Si2-zq-MKe" secondAttribute="top" id="Dnd-vB-5TO"/>
+                            <constraint firstItem="S8c-co-mhL" firstAttribute="leading" secondItem="aWe-rt-OsI" secondAttribute="leading" id="QEM-Ku-fEA"/>
+                            <constraint firstAttribute="bottom" secondItem="S8c-co-mhL" secondAttribute="bottom" id="Qs2-lO-jzk"/>
                             <constraint firstAttribute="bottom" secondItem="WeK-ik-xqs" secondAttribute="bottom" id="SiN-vb-ii3"/>
+                            <constraint firstItem="aWe-rt-OsI" firstAttribute="trailing" secondItem="S8c-co-mhL" secondAttribute="trailing" id="tm8-GG-2Vt"/>
                             <constraint firstItem="WeK-ik-xqs" firstAttribute="top" secondItem="Si2-zq-MKe" secondAttribute="top" id="yCB-Ff-PrL"/>
                         </constraints>
                     </view>
@@ -115,6 +161,7 @@
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
+                        <outlet property="emptyStateView" destination="S8c-co-mhL" id="lEq-i4-Qca"/>
                         <outlet property="tableView" destination="WeK-ik-xqs" id="Eaj-T3-hV1"/>
                     </connections>
                 </viewController>
@@ -125,6 +172,7 @@
     </scenes>
     <resources>
         <image name="1.circle.fill" catalog="system" width="128" height="121"/>
+        <image name="exclamationmark.triangle" catalog="system" width="128" height="112"/>
         <namedColor name="AppBackgroundColorScheme">
             <color red="0.92549019607843142" green="0.94117647058823528" blue="0.95294117647058818" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
