--- a/BougsApp-iOS/TargetsList/TargetsListViewController.storyboard
+++ b/BougsApp-iOS/TargetsList/TargetsListViewController.storyboard
@@ -72,14 +72,102 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Oku-mN-Ayb">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J0s-ZQ-RhC" customClass="NeumorphicView" customModule="BougsApp_iOS" customModuleProvider="target">
+                                        <rect key="frame" x="20" y="371.5" width="374" height="153.5"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="hXq-x7-u6Z">
+                                                <rect key="frame" x="30" y="20" width="314" height="113.5"/>
+                                                <subviews>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="network" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="5S4-BW-GeB">
+                                                        <rect key="frame" x="127" y="0.5" width="60" height="59"/>
+                                                        <color key="tintColor" name="TextPrimaryAccentColor"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="60" id="AFv-Gz-7dW"/>
+                                                            <constraint firstAttribute="height" constant="60" id="S5W-Ti-mX5"/>
+                                                        </constraints>
+                                                    </imageView>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Faild Loading..." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LJ6-hT-0r2">
+                                                        <rect key="frame" x="67.5" y="80" width="179.5" height="33.5"/>
+                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                                        <color key="textColor" name="TextPrimaryAccentColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                        <color key="backgroundColor" name="AppBackgroundColorScheme"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="hXq-x7-u6Z" secondAttribute="trailing" constant="30" id="O1G-wb-PGV"/>
+                                            <constraint firstAttribute="bottom" secondItem="hXq-x7-u6Z" secondAttribute="bottom" constant="20" id="a0m-1u-zdV"/>
+                                            <constraint firstItem="hXq-x7-u6Z" firstAttribute="leading" secondItem="J0s-ZQ-RhC" secondAttribute="leading" constant="30" id="e9K-mG-0QW"/>
+                                            <constraint firstItem="hXq-x7-u6Z" firstAttribute="top" secondItem="J0s-ZQ-RhC" secondAttribute="top" constant="20" id="ydO-bU-IRE"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" name="AppBackgroundColorScheme"/>
+                                <constraints>
+                                    <constraint firstItem="J0s-ZQ-RhC" firstAttribute="leading" secondItem="Oku-mN-Ayb" secondAttribute="leading" constant="20" id="1ft-Dq-Gu0"/>
+                                    <constraint firstAttribute="trailing" secondItem="J0s-ZQ-RhC" secondAttribute="trailing" constant="20" id="DgF-Yl-kny"/>
+                                    <constraint firstItem="J0s-ZQ-RhC" firstAttribute="centerY" secondItem="Oku-mN-Ayb" secondAttribute="centerY" id="juw-pe-NH2"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0gE-Mi-Ioe">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t9J-9y-FYd" customClass="NeumorphicView" customModule="BougsApp_iOS" customModuleProvider="target">
+                                        <rect key="frame" x="40" y="379" width="334" height="138.5"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="B20-G0-Jiz">
+                                                <rect key="frame" x="30" y="30" width="274" height="78.5"/>
+                                                <subviews>
+                                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="RpU-dS-G5u">
+                                                        <rect key="frame" x="118.5" y="0.0" width="37" height="37"/>
+                                                        <color key="color" name="TextPrimaryAccentColor"/>
+                                                    </activityIndicatorView>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2nf-K3-cGu">
+                                                        <rect key="frame" x="91" y="52" width="92.5" height="26.5"/>
+                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                                        <color key="textColor" name="TextPrimaryAccentColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                        <color key="backgroundColor" name="AppBackgroundColorScheme"/>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="B20-G0-Jiz" secondAttribute="bottom" constant="30" id="2Pg-Kc-Szn"/>
+                                            <constraint firstItem="B20-G0-Jiz" firstAttribute="leading" secondItem="t9J-9y-FYd" secondAttribute="leading" constant="30" id="GCF-hJ-XSb"/>
+                                            <constraint firstItem="B20-G0-Jiz" firstAttribute="top" secondItem="t9J-9y-FYd" secondAttribute="top" constant="30" id="rhj-rm-9IF"/>
+                                            <constraint firstAttribute="trailing" secondItem="B20-G0-Jiz" secondAttribute="trailing" constant="30" id="ybW-RB-Jdf"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" name="AppBackgroundColorScheme"/>
+                                <constraints>
+                                    <constraint firstItem="t9J-9y-FYd" firstAttribute="centerY" secondItem="0gE-Mi-Ioe" secondAttribute="centerY" id="D3v-5Z-ReK"/>
+                                    <constraint firstItem="t9J-9y-FYd" firstAttribute="leading" secondItem="0gE-Mi-Ioe" secondAttribute="leading" constant="40" id="HX8-VG-Gak"/>
+                                    <constraint firstAttribute="trailing" secondItem="t9J-9y-FYd" secondAttribute="trailing" constant="40" id="pza-AF-q19"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="g8t-lg-3HR"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="Oku-mN-Ayb" firstAttribute="trailing" secondItem="g8t-lg-3HR" secondAttribute="trailing" id="5DC-ok-DYQ"/>
                             <constraint firstItem="6dT-ed-rNX" firstAttribute="leading" secondItem="g8t-lg-3HR" secondAttribute="leading" id="9ap-dZ-MKJ"/>
+                            <constraint firstItem="Oku-mN-Ayb" firstAttribute="top" secondItem="aok-tP-q2T" secondAttribute="top" id="KCw-AA-itf"/>
                             <constraint firstAttribute="bottom" secondItem="6dT-ed-rNX" secondAttribute="bottom" id="Nn3-T9-Ncf"/>
                             <constraint firstItem="6dT-ed-rNX" firstAttribute="top" secondItem="aok-tP-q2T" secondAttribute="top" id="TH7-kZ-1eQ"/>
+                            <constraint firstItem="0gE-Mi-Ioe" firstAttribute="leading" secondItem="g8t-lg-3HR" secondAttribute="leading" id="XQZ-eF-QGD"/>
+                            <constraint firstItem="0gE-Mi-Ioe" firstAttribute="top" secondItem="aok-tP-q2T" secondAttribute="top" id="c1I-7L-C6e"/>
+                            <constraint firstItem="Oku-mN-Ayb" firstAttribute="leading" secondItem="g8t-lg-3HR" secondAttribute="leading" id="cEr-R6-A53"/>
                             <constraint firstItem="6dT-ed-rNX" firstAttribute="trailing" secondItem="g8t-lg-3HR" secondAttribute="trailing" id="ha7-1n-PsA"/>
+                            <constraint firstAttribute="bottom" secondItem="Oku-mN-Ayb" secondAttribute="bottom" id="o7x-6t-k38"/>
+                            <constraint firstAttribute="bottom" secondItem="0gE-Mi-Ioe" secondAttribute="bottom" id="vcq-U1-xsx"/>
+                            <constraint firstItem="0gE-Mi-Ioe" firstAttribute="trailing" secondItem="g8t-lg-3HR" secondAttribute="trailing" id="vrN-iH-ILz"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Select targets" id="vMx-z0-y6l">
@@ -92,6 +180,8 @@
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
+                        <outlet property="emptyView" destination="Oku-mN-Ayb" id="zgZ-9d-251"/>
+                        <outlet property="loadingView" destination="0gE-Mi-Ioe" id="UCE-ph-ZzU"/>
                         <outlet property="tableView" destination="6dT-ed-rNX" id="NCg-6W-zxy"/>
                     </connections>
                 </viewController>
@@ -102,6 +192,10 @@
     </scenes>
     <resources>
         <image name="checkmark.circle.fill" catalog="system" width="128" height="121"/>
+        <image name="network" catalog="system" width="128" height="121"/>
+        <namedColor name="AppBackgroundColorScheme">
+            <color red="0.92549019607843142" green="0.94117647058823528" blue="0.95294117647058818" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="TextPrimaryAccentColor">
             <color red="0.26666666666666666" green="0.26666666666666666" blue="0.26666666666666666" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
